redactable/tests/ui/not_sensitive_debug_requires_debug.stderr
error[E0277]: `NoDebug` doesn't implement `Debug`
 --> tests/ui/not_sensitive_debug_requires_debug.rs:8:20
  |
8 |     require_output(&NotSensitiveDebug(NoDebug));
  |     -------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Debug` is not implemented for `NoDebug`
  |     |
  |     required by a bound introduced by this call
  |
  = note: add `#[derive(Debug)]` to `NoDebug` or manually `impl Debug for NoDebug`
help: the trait `ToRedactedOutput` is implemented for `NotSensitiveDebug<T>`
 --> src/redaction/escape_hatches.rs
  |
  | / impl<T> ToRedactedOutput for NotSensitiveDebug<T>
  | | where
  | |     T: std::fmt::Debug,
  | |_______________________^
  = note: required for `NotSensitiveDebug<NoDebug>` to implement `ToRedactedOutput`
note: required by a bound in `require_output`
 --> tests/ui/not_sensitive_debug_requires_debug.rs:5:22
  |
5 | fn require_output<T: ToRedactedOutput>(_: &T) {}
  |                      ^^^^^^^^^^^^^^^^ required by this bound in `require_output`
help: consider annotating `NoDebug` with `#[derive(Debug)]`
  |
3 + #[derive(Debug)]
4 | struct NoDebug;
  |
