redactable/tests/ui/not_sensitive_debug_requires_debug.rs
use redactable::{NotSensitiveDebug, ToRedactedOutput};

struct NoDebug;

fn require_output<T: ToRedactedOutput>(_: &T) {}

fn main() {
    require_output(&NotSensitiveDebug(NoDebug));
}
